# Waffles-RTX-Engine

./: .gitignore  CMakeLists.txt  README.md  build.bat  compile_shaders.bat  makefile  run.bat
Driver/: CMakeLists.txt
Driver/src/: main.cpp
Waffles/: CMakeLists.txt
Waffles/Resources/Shader_SPIRV/: RayMarching_frag.spv  pass6_vert.spv  passthrough_frag.spv  passthrough_vert.spv  raymarch.spv
Waffles/Resources/Shaders/: RayMarching.frag  passthrough.frag  passthrough.vert
Waffles/src/Waffles/: Waffles.cpp  Waffles.h
Waffles/src/Waffles/Cores/: EngineCore.cpp  EngineCore.h  RenderCore.cpp  RenderCore.h
Waffles/src/Waffles/Rendering/: VulkanInstance.cpp  VulkanInstance.h  Window.cpp  Window.h
Waffles/src/Waffles/Rendering/Vertex/: Vertex.h
Waffles/src/Waffles/Tools/: Logging.h
Waffles/src/Waffles/Tools/DebugUtils/: VkDebugUtils.cpp  VkDebugUtils.h
Waffles/src/Waffles/Tools/FileUtils/: FileLoader.cpp  FileLoader.h
Waffles/src/Waffles/Tools/Input/: GLFWCallbacks.cpp  GLFWCallbacks.h  InputManager.h
build_scripts/: build_run.bat
src/: Waffles.h  main.cpp
src/Cores/: EngineCore.cpp  EngineCore.h  RenderCore.cpp  RenderCore.h
src/Rendering/: VulkanInstance.cpp  VulkanInstance.h  Window.h
src/Resources/Shaders/: RayMarching.frag
src/Startup/: Startup.cpp  Startup.h
src/Tools/: Logging.h
src/Tools/Input/: GLFWCallbacks.cpp  GLFWCallbacks.h  IOKeyStore.h  InputManager.h
src/Waffles/: Waffles.h
src/Waffles/Cores/: EngineCore.h  RenderCore.cpp  RenderCore.h
src/Waffles/Rendering/: VulkanInstance.cpp  VulkanInstance.h  Window.cpp
src/Waffles/Startup/: Startup.h
src/Waffles/Tools/FileUtils/: FileLoader.h
src/Waffles/Tools/Input/: GLFWCallbacks.h  InputManager.cpp
